mudanças policies